@@ -75,7 +75,7 @@ class Theme(object):
         theme_name = self._get_theme_name()
 
         for style in ['status', 'retweet', 'protected', 
-                      'image', 'linkbox', ]:
+                      'image', 'linkbox', 'bubble']:
             template_file = os.path.join(
                 self.all_themes[theme_name]['dir'], '%s.html' % style) \
                 if theme_name in self.all_themes else ''
