@@ -37,3 +37,46 @@ div.tumblr img { max-width: 160px; max-height: 90px; }
 div.tumblr h1 { font-size: 100%; } 
 div.tumblr ul { padding-left: 2em; }
 div.tumblr .source { margin-top: 0.5em; }
+
+div.tumblr .bubble { margin: 10px; }
+div.tumblr .bubble-text { 
+        margin-left: 50px;
+        padding: 10px 15px;
+        position: relative;
+        border: 2px solid #aaa;
+        background-color: #f5f5f5;
+                          border-radius: 10px;}
+
+div.tumblr .bubble-text:before {
+        border-top-width: 0px;
+        border-right-width: 12px;
+        border-bottom-width: 12px;
+        border-left-width: 0px;
+        border-color: transparent #aaa;
+        border-style: solid;
+
+        display: block;
+        position: absolute;
+        top: 18px;
+        left: -12px;
+        width: 0;
+        height: 0;
+        content: "";
+      }
+
+div.tumblr .bubble-text:after {
+        border-top-width: 0px;
+        border-right-width: 12px;
+        border-bottom-width: 12px;
+        border-left-width: 0px;
+        border-color: transparent #f5f5f5;
+        border-style: solid;
+
+        display: block;
+        position: absolute;
+        top: 20px;
+        left: -7px;
+        width: 0;
+        height: 0;
+        content: "";
+      }
