@@ -1,3 +1,7 @@
+2012-12-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* tumblr/*: Added support for all entry types on Tumblr.
+
 2012-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* tumblr/api.py, tumblr/account.py: Added support for 'post' &
